--- a/Web/BeStudent.Web/appsettings.json
+++ b/Web/BeStudent.Web/appsettings.json
@@ -9,13 +9,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-  //"Cloudinary": {
-  //  "cloudName": "name",
-  //  "apiKey": "key",
-  //  "apiSecret": "secret"
-  //},
-  //"SendGrid": {
-  //  "Key": "SendGrid Api key"
-  //}
+  "AllowedHosts": "*",
+  "Cloudinary": {
+    "cloudName": "name",
+    "apiKey": "key",
+    "apiSecret": "secret"
+  },
+  "SendGrid": {
+    "Key": "SendGrid Api key"
+  }
 }
