--- a/Web/BeStudent.Web/BeStudent.Web.csproj
+++ b/Web/BeStudent.Web/BeStudent.Web.csproj
@@ -1,20 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <configSections>
-      <section name="paypal" type="PayPal.SDKConfigHandler, PayPal" />
-    </configSections>
-    <paypal>
-      <settings>
-        <add name="mode" value="sandbox" />
-        <add name="connectionTimeout" value="360000" />
-        <add name="requestRetries" value="1" />
-        <add name="clientId" value="AewO0fN7c6GuMMO0fIQq_0qILiDOf4ASjy1cJTarVYmeNJPbePQ1mnV4g-HoTpvKMPShpl3q9x7hxILi" />
-        <add name="clientSecret" value="EGXduWBuSMzgSI5G7ikWf1fBUn42tOCPNzXMh1Li6yumI4AIQatBZ0NOCYrtqLD5fbm2Y8B18I-aveD7" />
-      </settings>
-    </paypal>
-  </PropertyGroup>
-
-  <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>aspnet-BeStudent-BBB373B5-EF3F-4DBB-B8AA-7152CEC275BF</UserSecretsId>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
@@ -44,7 +29,7 @@
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.96" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.2" />
-    <PackageReference Include="PayPal" Version="1.9.1" />
+    <PackageReference Include="PayPal" Version="2.0.0-rc2" />
     <PackageReference Include="PayPalCoreSDK" Version="1.7.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.164" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
